--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
 <!-- partial:index.partial.html -->
 <body class="container">
   <div class="night"></div>
+  <div class="name-container">
+    <h1 class="beautiful-name">Te un lindo dia</h1>
+    <h1 class="beautiful-name"> Stefy </h1>
+
+  </div>
+  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+  
+    .name-container {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+    }
+  
+    .beautiful-name {
+        font-family: 'Great Vibes', cursive;
+        font-size: 3em;
+        font-weight: bold;
+        background: linear-gradient(45deg, #FFD700, #FF8C00, #FF1493);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+        animation: glow 1.5s infinite alternate;
+    }
+  
+    @keyframes glow {
+        from {
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+        }
+        to {
+            text-shadow: 5px 5px 15px rgba(255, 140, 0, 0.8);
+        }
+    }
+  </style>
   <div class="flowers">
     <div class="flower flower--1">
       <div class="flower__leafs flower__leafs--1">
