--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="container">
   <div class="night"></div>
   <div class="name-container">
-    <h1 class="beautiful-name">Te un lindo dia</h1>
+    <h1 class="beautiful-name">Te un lindo día</h1>
     <h1 class="beautiful-name"> Stefy </h1>
 
   </div>
